--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,13 @@ body::-webkit-scrollbar{
     width: 559px;
 }
 
+.navTabs{
+    display: inline-block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 .nav .navMenu{
     border: 1px #580c64 solid;
     border-bottom: 0;
@@ -74,20 +81,20 @@ body::-webkit-scrollbar{
 #middleNav{
     margin: 22px 10px 0 10px;
 }
-
-.nav .navList{
-    display: inline-block;
+/* The Babbler Lists */
+.navList{
+    display: none;
     font-size: 0;
-    left: -7.33%;
+    left: -164%;
+    list-style: none;
     margin: 0;
     padding: 0;
     position: absolute;
-    top: 72px;
-    visibility: hidden;
-    width: 738px;
+    top: 46px;
+    width: 750px
 }
 
-.nav .navList .navChoice{
+.navChoice{
     background-color: #de6f54;
     border: 1px #580c64 solid;
     border-left: 1.5px #580c64 solid;
@@ -95,14 +102,14 @@ body::-webkit-scrollbar{
     color: #121ba8;
     cursor: pointer;
     display: inline-block;
-    font-size: 16px;
+    font-size: 15px;
     height: 25px;
     line-height: 23px;
     list-style: none;
     margin: 0;
     padding: 0;
     text-align: center;
-    width: 155px;
+    width: 160px;
 }
 
 .navChoice:hover{
